# bevy_text3d

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  bevy_text3d.code-workspace  bevy_text3d.code-workspace.backup
assets/models/animated/: Fox.glb
assets/shaders/: depth_only.wgsl  grid_lines.wgsl  texel_density_shader.wgsl  text3d.wgsl  text3d_prepass.wgsl
crates/patched_bevy/bevy_light/: Cargo.toml
crates/patched_bevy/bevy_light/src/: lib.rs
crates/patched_bevy/bevy_pbr/: Cargo.toml
crates/patched_bevy/bevy_pbr/src/render/: mesh.rs
crates/patched_bevy/bevy_pbr/src/volumetric_fog/: volumetric_fog.wgsl
examples/: basic.rs  custom_color.rs  from_rect.rs  peter_pans_shadow.rs  render_layers_shadows.rs  render_layers_text_shadows.rs  rotating_labels.rs  sdf_text_shadows.rs  simple_text_shadows.rs
src/: _lighting.rs  dump_glyph_profile.rs  font.rs  grounding.rs  lib.rs  pipeline.rs  pipeline_material.rs  shadow_casting.rs  tessellation.rs  text.rs
tests/: font_generate.rs  font_name.rs  layout_advance.rs
