[package]
name = "bevy_text3d"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"

bevy_mesh = "0.17.3"
fdsm = "0.7.0"
owned_ttf_parser = "0.25.0"
nalgebra = "0.33.2"
bevy_light = { path = "crates/patched_bevy/bevy_light" }
bevy_pbr = { path = "crates/patched_bevy/bevy_pbr" }

image = "0.25.1"
thiserror = "1.0.61"
bevy_log = "0.17.3"
color-eyre = "0.6.5"
lyon = "1.0.16"
bevy_ui = "0.17.3"
bevy_text = "0.17.3"
# open_space_controller dependency removed for standalone repo
bevy_asset_loader = "0.24.0-rc.1"
bevy_camera = "0.17.3"
avian3d = "0.4"

[features]
default = []

[patch.crates-io]
bevy_pbr = { path = "crates/patched_bevy/bevy_pbr" }
bevy_light = { path = "crates/patched_bevy/bevy_light" }

[[example]]
name = "basic"

[[example]]
name = "custom_color"

[[example]]
name = "from_rect"

[[example]]
name = "rotating_labels"

[[example]]
name = "sdf_text_shadows"

[[example]]
name = "simple_text_shadows"

[[example]]
name = "peter_pans_shadow"

[[example]]
name = "render_layers_shadows"

[[example]]
name = "render_layers_text_shadows"
